<resources>
    <string name="app_name">daan1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="title_activity_user">user</string>
    <string name="title_activity_signup">signup</string>
</resources>
